# hekate-pqc

./: .gitignore  Cargo.toml  NOTICE  README.md  deny.toml
.github/workflows/: ci.yml
examples/: mldsa.rs  mlkem.rs
examples/common/: mod.rs
src/: basemul.rs  high_bits.rs  lib.rs  norm_check.rs  ntt.rs  twiddle_rom.rs  utils.rs
src/mldsa/: arithmetic.rs  ctrl.rs  mod.rs  trace.rs  witness.rs
src/mlkem/: arithmetic.rs  ctrl.rs  mod.rs  trace.rs  witness.rs
tests/: basemul_chiplet.rs  mldsa_chiplet.rs  mlkem_chiplet.rs  ntt_chiplet.rs  twiddle_rom.rs
